Fix searchbox input text not displayed on firefox

--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -140,7 +140,6 @@ div#index-side-bar{
 
 }
 
-bg-ora
 /* APPLICATION TEMPALTE CSS */
 
 .cf:before, .cf:after{
@@ -177,7 +176,7 @@ bg-ora
     .form-wrapper input {
         width: 180px;
         height: 20px;
-        padding: 10px 5px;
+	    	padding-left:5px;
         float: left;
         font: bold 15px 'lucida sans', 'trebuchet MS', 'Tahoma';
         border: 0;
@@ -188,11 +187,11 @@ bg-ora
     }
 
     .form-wrapper input:focus {
-        outline: 0;
-        background: #fff;
-        -moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-        -webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
-        box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+      outline: 0;
+      background: #fff;
+      -moz-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+      -webkit-box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
+      box-shadow: 0 0 2px rgba(0,0,0,.8) inset;
     }
 
     .form-wrapper input::-webkit-input-placeholder {
